@@ -9,18 +9,18 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <logback.version>1.2.10</logback.version>
-        <spring-security.version>5.6.2</spring-security.version>
-        <lombok.version>1.18.22</lombok.version>
+        <logback.version>1.2.11</logback.version>
+        <spring-security.version>5.7.1</spring-security.version>
+        <lombok.version>1.18.24</lombok.version>
         <commons-collections.version>4.4</commons-collections.version>
         <commons-io.version>2.11.0</commons-io.version>
         <vavr.version>0.10.4</vavr.version>
-        <resteasy.version>6.0.0.Final</resteasy.version>
+        <resteasy.version>6.0.1.Final</resteasy.version>
         <freemarker.version>2.3.31</freemarker.version>
         <assertj.version>3.22.0</assertj.version>
         <hamcrest.version>2.2</hamcrest.version>
         <junit.version>5.8.2</junit.version>
-        <jetbrains-annotations.version>22.0.0</jetbrains-annotations.version>
+        <jetbrains-annotations.version>23.0.0</jetbrains-annotations.version>
         <commons-lang.version>3.12.0</commons-lang.version>
         <commons-text.version>1.9</commons-text.version>
     </properties>
@@ -121,7 +121,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
